--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.mercadopago</groupId>
+            <artifactId>sdk-java</artifactId>
+            <version>2.1.15</version>
+        </dependency>
+
         <!-- compile only, deployed container will provide this -->
         <!--
         <dependency>
