--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,11 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.mercadopago</groupId>
+            <artifactId>sdk-java</artifactId>
+            <version>2.1.16</version>
+        </dependency>
 
         <!-- compile only, deployed container will provide this -->
         <!--
