Definición de variables de entorno para el Servicio MercadoPago

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 uploadDir=src/main/webapp/resources/core/img/
 spring.thymeleaf.cache=false
+urlMercadopago=https://api.mercadopago.com/checkout/preferences
+authMercadopago=Bearer TEST-4819727839399270-102609-725d10a1fcb0916df6b613a36ef4188d-1524389727
